--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-web": "~0.19.6",
     "socket.io-client": "^4.3.2"
   },
