--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
-    "expo": "^52.0.16",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "expo": "^53.0.0",
+    "expo-linear-gradient": "^14.1.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "^0.20.0",
     "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
